[package]
name = "stellar_transfer"
version = "0.1.0"
edition = "2021"

[dependencies]
soroban-sdk ="21.7.3"
stellar_sdk = "0.1.4"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

